--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -6546,131 +6546,6 @@
          </configuration>
       </projectType>
       <projectType
-            buildArtefactType="org.eclipse.cdt.cross.arc.gnu.axs103.buildArtefactType.application"
-            id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.axs103"
-            isAbstract="true">
-         <configuration
-               artifactExtension="elf"
-               buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug"
-               id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.debug.axs103"
-               name="Debug"
-               parent="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base">
-            <toolChain
-                  id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.toolchain.debug.axs103"
-                  isAbstract="false"
-                  secondaryOutputs="org.eclipse.cdt.cross.arc.gnu.createflash.output;org.eclipse.cdt.cross.arc.gnu.createlisting.output;org.eclipse.cdt.cross.arc.gnu.printsize.output"
-                  superClass="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base.hs"
-                  targetTool="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.c.linker.debug.axs103;org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.cpp.linker.debug.axs103">
-               <targetPlatform
-                     id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.platform.debug.axs103"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.hs.linux.platform.base">
-               </targetPlatform>
-               <builder
-                     id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.builder.debug.axs103"
-                     isAbstract="false"
-                     isVariableCaseSensitive="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.hs.linux.builder.base">
-               </builder>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.assembler.debug.axs103"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.hs.linux.assembler.base">
-               </tool>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.c.compiler.debug.axs103"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.hs.linux.c.compiler.base">
-               </tool>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.cpp.compiler.debug.axs103"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.hs.linux.cpp.compiler.base">
-               </tool>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.c.linker.debug.axs103"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.hs.linux.c.linker.base">
-               </tool>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.cpp.linker.debug.axs103"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.hs.linux.cpp.linker.base">
-               </tool>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.createflash.debug.axs103"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.hs.linux.createflash.base">
-               </tool>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.createlisting.debug.axs103"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.hs.linux.createlisting.base">
-               </tool>
-            </toolChain>
-         </configuration>
-         <configuration
-               artifactExtension="elf"
-               buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release"
-               id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.release.axs103"
-               name="Release"
-               parent="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base">
-            <toolChain
-                  id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.toolchain.release.axs103"
-                  isAbstract="false"
-                  secondaryOutputs="org.eclipse.cdt.cross.arc.gnu.createflash.output;org.eclipse.cdt.cross.arc.gnu.createlisting.output;org.eclipse.cdt.cross.arc.gnu.printsize.output"
-                  superClass="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base.hs"
-                  targetTool="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.c.linker.release.axs103;org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.cpp.linker.release.axs103">
-               <targetPlatform
-                     id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.platform.release.axs103"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.hs.linux.platform.base">
-               </targetPlatform>
-               <builder
-                     id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.builder.release.axs103"
-                     isAbstract="false"
-                     isVariableCaseSensitive="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.hs.linux.builder.base">
-               </builder>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.assembler.release.axs103"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.hs.linux.assembler.base">
-               </tool>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.c.compiler.release.axs103"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.hs.linux.c.compiler.base">
-               </tool>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.cpp.compiler.release.axs103"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.hs.linux.cpp.compiler.base">
-               </tool>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.c.linker.release.axs103"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.hs.linux.c.linker.base">
-               </tool>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.cpp.linker.release.axs103"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.hs.linux.cpp.linker.base">
-               </tool>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.createflash.release.axs103"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.hs.linux.createflash.base">
-               </tool>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.createlisting.release.axs103"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.hs.linux.createlisting.base">
-               </tool>
-            </toolChain>
-         </configuration>
-      </projectType>
-      <projectType
             buildArtefactType="org.eclipse.cdt.cross.arc.gnu.axs101.buildArtefactType.application"
             id="com.synopsys.arc.gnu.elf.project.axs101.arc700">
          <configuration
@@ -6739,6 +6614,30 @@
             <toolChain
                   id="com.synopsys.arc.gnu.elf.project.axs101.em.release.toolchain"
                   superClass="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
+            </toolChain>
+         </configuration>
+      </projectType>
+      <projectType
+            buildArtefactType="org.eclipse.cdt.cross.arc.gnu.axs103.buildArtefactType.application"
+            id="com.synopsys.arc.gnu.elf.project.axs103">
+         <configuration
+               buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug"
+               id="com.synopsys.arc.gnu.elf.project.axs103.debug"
+               name="%debug"
+               parent="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base">
+            <toolChain
+                  id="com.synopsys.arc.gnu.elf.project.axs103.debug.toolchain"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base.hs">
+            </toolChain>
+         </configuration>
+         <configuration
+               buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release"
+               id="com.synopsys.arc.gnu.elf.project.axs103.release"
+               name="%release"
+               parent="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base">
+            <toolChain
+                  id="com.synopsys.arc.gnu.elf.project.axs103.release.toolchain"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base.hs">
             </toolChain>
          </configuration>
       </projectType>
